kubernetes/kong-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kong
  labels:
    app.kubernetes.io/name: kong
    app.kubernetes.io/instance: kong
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong
  namespace: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong
  template:
    metadata:
      labels:
        app: kong
    spec:
      tolerations:
        - key: NodeType
          operator: Equal
          value: app
          effect: NoSchedule
      nodeSelector:
        type: app
      imagePullSecrets:
        - name: private-registry
      containers:
        - image: <<private-registry>>/kong-oidc:0.0.1-dev
          imagePullPolicy: IfNotPresent
          name: kong
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 500Mi
          ports:
            - containerPort: 8000
              name: proxy
              protocol: TCP
            - containerPort: 8443
              name: proxy-ssl
              protocol: TCP
            - containerPort: 8001
              name: admin
              protocol: TCP
            - containerPort: 8100
              name: metrics
              protocol: TCP
