kubernetes/keycloak-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/instance: keycloak
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      tolerations:
        - key: NodeType
          operator: Equal
          value: app
          effect: NoSchedule
      nodeSelector:
        type: app
      containers:
        - image: jboss/keycloak:16.1.0
          imagePullPolicy: IfNotPresent
          name: keycloak
          resources:
            requests:
              memory: "512Mi"
              cpu: "0.5"
            limits:
              memory: "2048Mi"
              cpu: "3"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    app: keycloak
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
spec:
  ingressClassName: kong
  rules:
    - host: keycloak.localhost.somewhere
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 80
